# crabby_changelog

./: Cargo.toml  README.md  build.sh  foo.md
.crabby_changelog/: changelog.json  changelog.toml  config.toml
src/: cli.rs  config.rs  github_api.rs  main.rs  state.rs  tera_functions.rs  util.rs
src/state/: change.rs  map_to_list.rs  one_or_many.rs
